--- a/TravelPlanner 2.1/res/layout/map.xml
+++ b/TravelPlanner 2.1/res/layout/map.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--Open-Android-TravelPlanner Copyright © 2012
+@author "Hema Kumar"
+//** This file is part of TravelPlanner2.1 .This is free software: you can redistribute it
+* and/or modify it under the terms of the GNU General Public License as published by the
+* Free Software Foundation, either version 3 of the License, or any later version.
+* Travel Planner is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
+* without even the implied warranty ofMERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+* See theGNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License along with TravelPlanner2.1.
+* If not, see <http://www.gnu.org/licenses/>.
+* For feedback please mail at email id hemasid@gmail.com -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/mainlayout" android:orientation="vertical"
 	android:layout_width="fill_parent" android:layout_height="fill_parent">
@@ -19,7 +31,7 @@
    <EditText android:id="@+id/txtMapSearch" 
     android:layout_column="2" 
     android:gravity="left" 
-    android:width = "80dip"
+    android:width = "160dip"
       />
      
      
